--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
     "react-helmet-async": "^1.3.0",
+    "react-highlight-words": "^0.20.0",
     "react-hooks-paginator": "^0.5.0",
     "react-i18next": "^12.0.0",
     "react-mailchimp-subscribe": "^2.1.3",
